--- a/src/stylesheets/Components/collections.css
+++ b/src/stylesheets/Components/collections.css
@@ -77,7 +77,7 @@
   padding-left: 1.8rem;
 
   a {
-    width: fit-content;
+    /* width: fit-content; */
     display: flex;
     align-items: center;
   }
