--- a/src/stylesheets/Components/layouts.css
+++ b/src/stylesheets/Components/layouts.css
@@ -53,7 +53,7 @@
 .L_Module {
   display: flex;
   flex-direction: column;
-  margin-top: var(--header-offset);
   min-height: 100vh;
+  margin-top: var(--space-32);
 }
 /* comment random */
