--- a/src/stylesheets/Components/organisms.css
+++ b/src/stylesheets/Components/organisms.css
@@ -44,17 +44,6 @@
   display: flex;
   flex-direction: column;
   gap: clamp(1.5rem, -0.127rem + 3.39vw, 2rem);
-  grid-column: 7/11;
-
-  @media screen and (max-width: 1240px) {
-    grid-column: 7/12;
-  }
-  @media screen and (max-width: 1024px) {
-    grid-column: 5/10;
-  }
-  @media screen and (max-width: 768px) {
-    grid-column: -1 / 1;
-  }
 
   .A_Button {
     width: 100%;
@@ -160,7 +149,7 @@
   }
 }
 
-.O_ModuleCard,
+/* .O_ModuleCard, */
 .O_CardArticle {
   width: 100%;
   text-decoration: none;
@@ -168,27 +157,6 @@
   flex-direction: column;
   gap: var(--space-16);
   grid-column: span 4;
-
-  .M_ArticleCardBio {
-    display: flex;
-    flex-direction: column;
-    gap: var(--space-8);
-    height: 140px;
-
-    p.caption-caps {
-      color: var(--gray-light);
-    }
-
-    .M_AboutArticle {
-      display: flex;
-      flex-direction: column;
-      gap: var(--space-6);
-
-      p.body {
-        color: var(--gray-medium);
-      }
-    }
-  }
 
   &:hover {
     h4 {
@@ -200,11 +168,11 @@
   @media screen and (max-width: 1024px) {
     grid-column: span 3;
 
-    .M_ArticleCardBio {
+    /* .M_ArticleCardBio {
       p.body {
-        font-size: clamp(0.75rem, 0.932rem + 0.301vw, 1.125rem);
+        font-size: clamp(0.9375rem, 0.375rem + 1.1719vw, 1.125rem);
       }
-    }
+    } */
   }
   @media screen and (max-width: 468px) {
     grid-column: 1/-1;
@@ -229,6 +197,29 @@
 
 .O_ModulePageCover {
   position: relative;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 270px;
+}
+
+.O_ModuleRow {
+  text-decoration: none;
+  padding-right: var(--space-8);
+  height: 3.75rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid var(--gray-lightest);
+  border-bottom: 1px solid var(--gray-lightest);
+
+  &:hover {
+    .M_ModuleDescription,
+    .arrowIcon {
+      opacity: 0.7;
+    }
+  }
 }
 
 .O_PartList {
@@ -475,7 +466,26 @@
   @media screen and (max-width: 786px) {
     display: none;
   }
+
+  &.article-anchors {
+    @media screen and (max-width: 786px) {
+      display: none;
+    }
+  }
+
+  &.is-hidden {
+    display: none;
+  }
 }
+/* .W_ArticlePage.modules {
+  .O_ArticleContent {
+    order: 1;
+  }
+  .W_ArticleContentContainer {
+    order: 2;
+  }
+} */
+
 .O_CodeBar {
   width: 100%;
   display: flex;
@@ -498,10 +508,7 @@
   position: sticky;
   top: var(--header-offset);
   height: 32px;
-  z-index: 2;
-  overflow-x: auto;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+  z-index: 10;
 }
 .O_PartCover {
   height: 480px;
@@ -611,4 +618,21 @@
 }
 .O_ModuleHeadText {
   grid-column: 4 / 9;
+  align-items: self-start;
+  display: flex;
+  flex-direction: column;
+  gap: var(--space-32);
+
+  .A_IconText {
+    margin-left: -4px;
+    p {
+      color: var(--gray-soft);
+    }
+    svg {
+      fill: var(--gray-soft);
+    }
+  }
+  @media screen and (max-width: 1024px) {
+    grid-column: 1/6;
+  }
 }
