--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -19,14 +19,15 @@
   padding-bottom: var(--space-16);
 
   p {
-    grid-column: span 3;
+    grid-column: 1/-1;
   }
 
   h2 {
     grid-column: 7/13;
   }
   h4 {
-    grid-column: span 9;
+    grid-column: 1/-1;
+    max-width: 880px;
   }
 }
 .M_HeadingPicture {
