--- a/src/stylesheets/Components/molecules.css
+++ b/src/stylesheets/Components/molecules.css
@@ -29,12 +29,26 @@
     grid-column: 1/-1;
     max-width: 880px;
   }
+
+  &.centered {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: var(--space-12);
+    justify-content: center;
+    text-align: center;
+    max-width: 850px;
+    margin: 0 auto;
+    border: none;
+
+    @media screen and (max-width: 528px) {
+      align-items: flex-start;
+      justify-content: flex-start;
+      text-align: left;
+    }
+  }
 }
-.M_HeadingPicture {
-  display: flex;
-  flex-direction: column;
-  gap: var(--space-12);
-}
+
 .M_HeadingContainer {
   display: flex;
   flex-direction: column;
@@ -388,7 +402,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: var(--space-16);
+  gap: var(--space-12);
 }
 .M_TelegramAction {
   display: flex;
