--- a/src/stylesheets/basics.css
+++ b/src/stylesheets/basics.css
@@ -165,3 +165,48 @@ code {
   }
 }
 /*  */
+.eye {
+  width: 160px;
+  height: 160px;
+  background: #ffffff;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  transform: scaleY(1.2);
+  /* border: 1px solid var(--gray-lightest); */
+}
+
+.iris {
+  width: 72px;
+  height: 72px;
+  background: var(--beautiful-blue);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  will-change: transform;
+}
+
+.pupil {
+  width: 30px;
+  height: 30px;
+  background: #fafafa;
+  border-radius: 50%;
+  position: relative;
+}
+
+.eyelid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background: var(--beautiful-blue);
+  transform: scaleY(0);
+  transform-origin: top center;
+  z-index: 10;
+}
